<resources>
    <string name="app_name">Shift</string>
    <string name="home">home</string>
    <string name="add">add</string>
    <string name="chat">chat</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">favorites</string>
    <string name="own">own</string>
    <string name="rented">rented</string>
    <string name="log_out">log out</string>
    <string name="settings">settings</string>
    <string name="virtual_wallet">virtual wallet</string>
    <string name="rent_history">rent history</string>
    <string name="feed">feed</string>
    <string name="create_card">create card</string>
    <string name="menu_icon">menuIcon</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="i_m_not_a_robot">I\'m not a robot</string>
    <string name="confirm_email">Confirm email</string>
    <string name="code">code</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="icon">icon</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="entry_login">Entry login</string>
    <string name="entry_password">Entry password</string>
    <string name="enter_code">Enter code</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="passwords_are_different">Passwords are different</string>
    <string name="password_length_must_be_more_then_5_symbols">Password length must be more then 5 symbols</string>
    <string name="password_can_contains_only_latin_symbols_digital_and_symbols">Password can contains only latin symbols, digital and symbols _, !, @, %, &amp;</string>
    <string name="You_re_not_authorized">You\'re not authorized</string>
    <string name="password_length_must_be_in_8_to_32_symbols">Password length must be in 8 to 32 symbols</string>
    <string name="password_must_contains_one_caps_capital_spelled_and_digit_at_least">Password must contains one caps capital, spelled and digit at least</string>
    <string name="options">options</string>
    <string name="enter_category">Enter category</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_price">Enter price</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_address">Enter address</string>
    <string name="something_went_wrong_try_again">Something went wrong. Try again</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="end_renting">End renting</string>
    <string name="ypu_haven_t_own_cards_yet">You haven\'t own cards yet</string>
    <string name="delete_account">Delete account</string>
    <string name="you_haven_t_internet_connection">You haven\'t Internet connection</string>
    <string name="try_again">Try again</string>
    <string name="term">Term</string>
</resources>