<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/walletFragment"
            android:icon="@drawable/ic_wallet"
            android:title="@string/virtual_wallet" />

        <item
            android:id="@+id/rentedFragment"
            android:icon="@drawable/ic_rented"
            android:title="@string/rented" />

        <item
            android:id="@+id/ownFragment"
            android:icon="@drawable/ic_own"
            android:title="@string/own" />

        <item
            android:id="@+id/rentHistoryFragment"
            android:icon="@drawable/ic_rent_history"
            android:title="@string/rent_history" />

        <item
            android:id="@+id/favoritesFragment"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favorites" />

        <item
            android:id="@+id/logOutButton"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />
    </group>
</menu>