<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/feedFragment"
            android:icon="@drawable/ic_home"
            android:title=""
            android:titleCondensed="@string/feed" />

        <item
            android:id="@+id/createCardFragment"
            android:icon="@drawable/is_add"
            android:title=""
            android:titleCondensed="@string/create_card" />

        <item
            android:id="@+id/chatFragment"
            android:icon="@drawable/ic_mail"
            android:title=""
            android:titleCondensed="@string/chat" />

        <item
            android:id="@+id/sidebar"
            android:icon="@drawable/ic_profile"
            android:title="" />
    </group>

</menu>