<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E7E2"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragmentContainerFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/navigationGuideline"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <ImageButton
        android:id="@+id/feedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newCardButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navigationGuideline"
        android:contentDescription="@string/home" />

    <ImageButton
        android:id="@+id/newCardButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="15dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chatButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/feedButton"
        app:layout_constraintTop_toTopOf="@+id/navigationGuideline"
        app:srcCompat="@drawable/is_add"
        android:contentDescription="@string/add" />

    <ImageButton
        android:id="@+id/chatButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="15dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newCardButton"
        app:layout_constraintTop_toTopOf="@+id/navigationGuideline"
        android:contentDescription="@string/chat" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="15dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chatButton"
        app:layout_constraintTop_toTopOf="@+id/navigationGuideline"
        android:contentDescription="@string/profile" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/navigationGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

</androidx.constraintlayout.widget.ConstraintLayout>