<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E7E2"
    tools:context=".authorization.SignUpFragment">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/icon"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iconGuideline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addPhotoButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:background="@drawable/round_button"
        android:foreground="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@id/iconImageView"
        app:layout_constraintEnd_toEndOf="@id/iconImageView" />

    <TextView
        android:id="@+id/warningTextView"
        style="@style/warning_text_view"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/warningGuideline"
        tools:text="Warning" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/copyable_field_edit_text"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/nameEndGuideline"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/nameStartGuideline" />

    <EditText
        android:id="@+id/surnameEditText"
        style="@style/copyable_field_edit_text"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/surnameEndGuideline"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/surnameStartGuideline" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/copyable_field_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/emailEndGuideline"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/emailStartGuideline" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        style="@style/copyable_field_edit_text"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberEndGuideline"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/phoneNumberStartGuideline" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/copyable_field_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/passwordEndGuideline"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/passwordStartGuideline" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        style="@style/copyable_field_edit_text"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordEndGuideline"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/confirmPasswordStartGuideline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        style="@style/plane_button"
        android:layout_marginHorizontal="40dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/submitEndGuideline"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/submitStartGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/iconGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/warningGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameStartGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameEndGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/surnameStartGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/surnameEndGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emailStartGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emailEndGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/phoneNumberStartGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/phoneNumberEndGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/passwordStartGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/passwordEndGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/confirmPasswordStartGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/confirmPasswordEndGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/submitStartGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/submitEndGuideline"
        style="@style/horizontal_guideline"
        app:layout_constraintGuide_percent="0.89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalCenterGuideline"
        style="@style/vertical_guideline"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        style="@style/vertical_guideline"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        style="@style/vertical_guideline"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>